# aiven-cost

./: .gitignore  Dockerfile_aiven-cost  Dockerfile_currency  Makefile  README.md  aiven-cost.Dockerfile  currency.Dockerfile  endresult.md  flake.nix  go.mod  go.sum  mise.toml  tools.go
.github/workflows/: aiven-cost.yaml  build.yaml  build_and_push_aiven-cost.yaml  build_and_push_currency.yaml  build_and_push_cyrrency.yaml  currency.yaml  kafka-cost.yaml  test.yaml
.nais/: aiven-cost.yaml  currency.yaml  kafka-cost.nix  kafka-cost.yaml
aiven/: aiven.go  model.go
bigquery/: bigquery.go  cost.go  currency.go  schema.go
billing/: billing.go
cmd/aiven-cost/: main.go
cmd/csv-backfill/: main.go
cmd/currency/: main.go
cmd/currency-data/: main.go
config/: config.go
currency/: currency.go  model.go
internal/aiven/: aiven.go  model.go
internal/bigquery/: bigquery.go  cost.go  currency.go  schema.go
internal/billing/: billing.go
internal/config/: config.go
internal/currency/: currency.go
internal/log/: log.go
kafka-cost/: Cargo.toml  Dockerfile
kafka-cost/src/: aiven.rs  main.rs
kafka-cost/src/aiven/: kafka_instance.rs  kafka_topic.rs
mise/: config.toml
mise/tasks/: aiven-cost.sh  build.sh  currency.sh  fmt.sh  gofix.sh
mise/tasks/check/: deadcode.sh
mise/tasks/ci/: fmt.sh
