[package]
name = "kafka-cost"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bigdecimal = { version = "0.4.8", features = ["serde-json"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
gcp-bigquery-client = "0.25"
google-cloud-auth = "0.20"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "charset", "http2"], default-features = false}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
