[package]
name = "kafka-cost"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bigdecimal = { version = "0.4.8", features = ["serde-json"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
futures-util = "0.3"
gcloud-bigquery = { version = "1.3.0", features = ["rustls-tls", "auth"], default-features = false }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "charset", "http2"], default-features = false}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-retry2 = { version = "0.5.7", features = ["jitter", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
